C-C TB test. Too many warnings. WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file .../mozilla/toolkit/components/antitracking/AntiTrackingUtils.cpp, line 34
Categories
(Core :: Privacy: Anti-Tracking, defect, P3)
Tracking
()
People
(Reporter: ishikawa, Assigned: mikokm)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I build and test C-C thunderbird locally under linux.
I think the bug would be also visible in other platforms, though.
I noticed there are too many warnings of the following form during local mochitest of C-C TB.
21126: Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/toolkit/components/antitracking/AntiTrackingUtils.cpp, line 347
The number at the beginning 21126 is the number of occurences of the warning during mochitest.
The same warnings are seen in try-comm-central submission of others. For example, see
https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=8c903ef8a06a2dfcbb64d4ce7fe1666adc0947ea
The log:
https://firefoxci.taskcluster-artifacts.net/U-OqL-bgRYef9hL4fNFUrA/0/public/logs/live_backing.log
The number of such warnings was much fewer in early September.
For example, the following is the number from my local mochitest run on Sept 8th.: only 123.
Something has changed over the last month or so.
123: Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file /NEW-SSD/NREF-COMM-CENTRAL/mozilla/toolkit/components/antitracking/AntiTrackingUtils.cpp, line 347
I know TB is not a browser, but it does render HTML page and so it should be equipped with antitracking feature. I think something is not quite right with the current implementation, though.
Updated•5 years ago
|
Comment 1•5 years ago
•
|
||
This also happens on my Gecko build under Windows. Could you reassign severity/priority based on that?
The BasePrincipal::GetAsciiOrigin function is called there and then again calls SystemPrincipal::GetURI which always assigns nullptr.
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: Forced to copy ObserverTable due to nested notifications: file C:/Users/Kagami/Documents/GitHub/gecko-dev/image/ProgressTracker.h:82
[Parent 23044, Main Thread] WARNING: Forced to copy ObserverTable due to nested notifications: file C:/Users/Kagami/Documents/GitHub/gecko-dev/image/ProgressTracker.h:82
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
[Parent 23044, Main Thread] WARNING: 'NS_FAILED(targetPrincipal->GetAsciiOrigin(targetOrigin))', file C:/Users/Kagami/Documents/GitHub/gecko-dev/toolkit/components/antitracking/AntiTrackingUtils.cpp:347
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
This happens on Gecko with all platforms.
Updated•5 years ago
|
| Reporter | ||
Comment 3•5 years ago
|
||
Any takers?
Comment 4•5 years ago
|
||
Tim, could you help prioritize/find an owner for this?
Comment 5•5 years ago
|
||
My apologies, for some reason I missed that Dimi already prioritized this.
| Assignee | ||
Comment 6•5 years ago
|
||
Updated•5 years ago
|
Comment 8•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•4 years ago
|
Description
•