Bug 1667942 - Disable a spammy warning r=timhuang

Differential Revision: https://phabricator.services.mozilla.com/D95535